# plain-aligner

./: .gitignore  README  setup.cfg
bitext_aligner/: __init__.py  aligner.py  config.py  main.py  pytest.ini
bitext_aligner/tests/: conftest.py  long_tar_file.txt  src_file.txt  tar_file.txt  test_align.py
