[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = plain_aligner
version = 0.1.0
description = A very plain text aligner
license = gplv3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  click

[options.entry_points]
console_scripts =
  palign=bitext_aligner.main:cli
